# animator

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
examples/: animation.json  demo.py
examples/exporter_demo/: exporter_demo.py
examples/sample/: animation.json  sample.py
src/animator/: animation.py  easing.py  exporter.py  instruction.py  parser.py  sprite.py
tests/sample/: sample.py
