[project]
name = "animator"
version = "0.0.1"
authors = [
  { name="Yongkang Zhou", email="zhoudtc@outlook.com" },
]
description = "A python package for creating 2D animations based on formatted instructions"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "imageio[ffmpeg]>=2.37.0",
    "pillow>=11.3.0",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: MacOS",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[build-system]
requires = ["uv_build >= 0.7.19, <0.9.0"]
build-backend = "uv_build"

[project.urls]
Homepage = "https://github.com/zykdtc/animator/"